added header component

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -53,7 +53,12 @@ body, input, textarea, button {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    
+
+    font-weight: 600;
+    font-family: Lexend, sans-serif;
+    color: var(--gray-800); 
+
+
 }
 
 h1 {
