--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -117,11 +117,32 @@
         border: 0;
         font-size: 0;
 
+        transition: filter 0.2s;
+
+        &:disabled {
+            cursor: not-allowed;
+            filter: brightness(0.8)
+
+        }
+
+        &:hover:not(:disabled) {
+            filter: brightness(0.7)
+        }
+       
         &.playButton {
             width: 4rem;
             height: 4rem;
             border-radius: 1rem;
             background: var(--purple-400);
+
+           
+
+            &:hover {
+
+                filter: brightness(0.95)
+            
+            }
+    
 
         }
     }
