--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -29,7 +29,7 @@
 
         align-self: stretch;
 
-        &.empty {
+        &.empty .progress {
             opacity: 0.5;
         }
 
@@ -128,13 +128,20 @@
         &:hover:not(:disabled) {
             filter: brightness(0.7)
         }
+
+        &.isActive {
+            filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+        }
+        &.isActive:hover {
+            filter: brightness(0.6) invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+        }
        
         &.playButton {
             width: 4rem;
             height: 4rem;
             border-radius: 1rem;
             background: var(--purple-400);
-
+ 
            
 
             &:hover {
